--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -7,3 +7,11 @@ $arial: Arial, sans-serif;
 $book: 400;
 $medium: 500;
 $demi: 700;
+
+h1 {
+  font-family: $franklin;
+  font-weight: $medium;
+  font-size: 28px;
+  letter-spacing: 0.5px;
+  line-height: 130%;
+}
