--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -6,5 +6,7 @@
 'components/header',
 'components/navigation',
 'components/hero',
+'components/information',
+'components/profile',
 'components/references',
 'components/footer';
