--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -8,5 +8,7 @@
 'components/hero',
 'components/information',
 'components/profile',
+'components/tools',
+'components/videos',
 'components/references',
 'components/footer';
