--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -28,6 +28,10 @@
     a {
       text-decoration: none;
       color: $white;
+
+      &:hover {
+        font-weight: $demi;
+      }
     }
   }
 
@@ -47,6 +51,10 @@
       margin-top: 30px;
       line-height: 100%;
       color: $white;
+
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
 }
