--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   height: 520px;
-  background: url('../assets/img/IVA-Cover.jpg') no-repeat bottom right;
+  background: url('../assets/img/IVA-Cover.jpg') no-repeat right;
   background-color: $darkblue;
   padding: 190px 175px 0 175px;
 
